@@ -42,6 +42,7 @@ struct _auth_basic_config {
     wordlist *authenticate;
     time_t credentialsTTL;
     int casesensitive;
+    int blankpassword;
 };
 
 typedef struct _auth_basic_config auth_basic_config;
